3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Massive doxygenation of code. Reformat indentation. No functional change.
 common/object.c path.c player.c porting.c quest.c readable.c recipe.c region.c
Ryo 2006-12-29

Fix previous broken commit.
 common/arch.c
Massive doxygenation of code. Reformat indentation. No functional change.
 common/friend.c glue.c holy.c image.c info.c init.c item.c links.c living.c loader.l
  logger.c los.c map.c
Ryo 2006-12-28

Massive doxygenation of code. Reformat indentation. No functional change.
 Doxyfile: extract also static and private stuff.
 common/anim.c arch.c button.c exp.c
Ryo 2006-12-27

Fix for bug #1622575: Range attack switches to punching on contact,
 applied patch courtesy Aaron Baugher
 server/skill_util.c: use good flag to not switch.
Ryo 2006-12-27

Fix some crashes observed on metalforge:
common/treasure.c: When generating flesh items from custom monsters,
  update other_arch of the flesh item to point back to the original
  base archetype, not the custom archetype.
random_maps/treasure.c: Create the key object before we reference it
  in find_first_free_spot()
MSW 2006-12-26

Make method/property coherent for Python objects.
 plugins/cfpython/cfpython_archetype.c cfpython_party.c cfpython_region.c
 plugins/cfpython/include/cfpython_archetype_private.h cfpython_party_private.h cfpython_region_private.h
Ryo 2006-12-26

Implemented FR #1539153: Blessed weapons should have an owner.
Added option personalized_blessings to activate that feature.
 server/apply.c
 server/gods.c
 server/init.c
 include/global.h
Yann Chachkoff 2006-12-26

Fix for bug #1527978: summon fog spell is somewhat broken.